Inicio de reestructuración
Cambios estéticos y acomodo de funciones generales

--- a/sources/Variables.ini
+++ b/sources/Variables.ini
@@ -1,5 +1,9 @@
 [0]
-A = 1
-B = 2
-C = 3
+correoContacto = admin@metaspace.com
+inactividadAdministrador = 90
+inactividadAlumno = 10
+inactividadGestor = 10
+inactividadPadre = 10
+inactividadTutores = 10
+tokenMoodle = 09dcbb5a4201cc5175d34acd12910b30
 
