--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 IndexIgnore */*
-ErrorDocument 403 /softmeta/er403.php
-ErrorDocument 404 /softmeta/er404.php
+ErrorDocument 403 ../er403.php
+ErrorDocument 404 ../er404.php
 Options -Indexes
